--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 						<div class="advertising">
 							<div class="container">
 							<div class="row">
-							<div class="col-md-4 col-md-offset-1">
+							<div class="col-xs-6">
 								<img src="images/pic1.png" alt="">
 
 							</div>
-							<div class="col-md-4 col-md-offset-1">
+							<div class="col-xs-6">
 								<img src="images/pic2.png" alt="">
 							</div>
 							</div>
